# email-triage-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  baseline_openai.py  client.py  inference.py  models.py  openenv.yaml  problem_statement.txt  pyproject.toml  sample_inference.py
server/: __init__.py  app.py  email_triage_environment.py  grader.py  tasks.py
